--- a/TenderInfo/Views/Account/_PartialModalEdit.cshtml
+++ b/TenderInfo/Views/Account/_PartialModalEdit.cshtml
@@ -567,7 +567,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="tbxTenderSuccessPersonStartDateEdit">中标候选人公示开始时间</label>
-                                        <input id="tbxTenderSuccessPersonStartDateEdit" name="tbxTenderSuccessPersonStartDateEdit" type="text" class="form-control" />
+                                        <input id="tbxTenderSuccessPersonStartDateEdit" name="tbxTenderSuccessPersonStartDateEdit" type="text" class="form-control accountDate" />
                                     </div>
                                 </div>
                             </div>
@@ -575,7 +575,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="tbxTenderSuccessPersonEndDateEdit">中标候选人公示结束时间</label>
-                                        <input id="tbxTenderSuccessPersonEndDateEdit" name="tbxTenderSuccessPersonEndDateEdit" type="text" class="form-control" />
+                                        <input id="tbxTenderSuccessPersonEndDateEdit" name="tbxTenderSuccessPersonEndDateEdit" type="text" class="form-control accountDate" />
                                     </div>
                                 </div>
                             </div>
