--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -314,31 +314,17 @@
                 }
             });
 
+            //登录超时弹出提示并转跳到登录页面
             function CheckCookie() {
-                console.log(getCookie(".ASPXAUTH"));
+                //console.log(getCookie(".ASPXAUTH"));
                 //console.log(getCookie("ASP.NET_SessionId"));
                 if (getCookie(".ASPXAUTH") === "") {
                     clearInterval(timerAjax);
                     alert("登录超时，请重新登录！");
                     window.location.href = "/Home/Login";
-                    //toastr.error("登录超时，请重新登录！", "提示");
-                    //setTimeout(function () {
-                    //    window.location.href = "/Home/Login";
-                    //    //window.location.href = "/Home/LoginFormAD";
-                    //}, 1500);
                 }
             }
-
-            function CheckAjax() {
-                $.post("/Home/CheckAjax", {},
-                    function (data, textStatus, jqXHR) {
-                        console.log(data);
-                    }
-                );
-            }
-
             var timerAjax=setInterval(CheckCookie, 10*1000);
-            //setInterval(CheckAjax, 10*1000);
         });
     </script>
 </body>
