--- a/TenderInfo/Views/Account/SearchInfo.cshtml
+++ b/TenderInfo/Views/Account/SearchInfo.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label for="ddlTenderInfoSearch">招标情况</label>
-                <select id="ddlTenderInfoSearch" name="ddlTenderInfoSearch" class="form-control input-sm">
+                <select id="ddlTenderInfoSearch" name="ddlTenderInfoSearch" class="form-control">
                     <option value="">全部</option>
                     <option value="一次成功">一次成功</option>
                     <option value="一次失败">一次失败</option>
@@ -38,6 +38,14 @@
             <div class="form-group">
                 <label for="tbxApplyPersonSearch">申请人：</label>
                 <input type="text" id="tbxApplyPersonSearch" class="form-control" placeholder="申请人">
+            </div>
+            <div class="form-group">
+                <label for="ddlIsCompleteSearch">完成情况：</label>
+                <select id="ddlIsCompleteSearch" name="ddlIsCompleteSearch" class="form-control">
+                    <option value="">全部</option>
+                    <option value="已完成">已完成</option>
+                    <option value="未完成">未完成</option>
+                </select>
             </div>
             <div class="form-group">
                 <label for="tbxPlanInvestPriceStartSearch">预计投资(万元)范围：</label>
