修改完成招标台账excel导出功能

--- a/TenderInfo/Views/Account/EditAccountMaterial.cshtml
+++ b/TenderInfo/Views/Account/EditAccountMaterial.cshtml
@@ -241,7 +241,7 @@
                             </div>
                         </div>
                     </div>
-                    @*投标人信息*@
+                    @*投标人信息--复议*@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             投标人信息
@@ -275,7 +275,7 @@
                             </div>
                         </div>
                     </div>
-                    @*中标人信息*@
+                    @*中标人信息--复议*@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             中标人信息
@@ -352,7 +352,7 @@
                             <img src="~/Content/控制价公式.PNG" class="pull-right" />
                         </div>
                     </div>
-                    @*评标委员会*@
+                    @*评标委员会--复议*@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             评标委员会
